--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -1,41 +1,44 @@
 extends ../layouts/default
 
 block content
-    .masthead.clearfix
-        .inner
-            h3.masthead-brand 상세 정보
-            div.col-sm-12
-                button.btn.btn-primary.btn-signup(onclick="location.href='/usermanage'") 목록
-                button.btn.btn-primary.btn-danger(onclick="location.href='/usermanage/#{usermanage._id}/delete'") 삭제
-            
-            div
+    .content
+            .container
+                .row(style='margin-top:20px')
+                    .col-xs-12.col-sm-10.col-md-8
+                        h3.masthead-brand 사원정보관리(내외) > 상세정보
+                        hr.colorgraph
                 form.form.col-md-12.center-block(name='form' action='/usermanage/#{usermanage._id}/edit' method='post')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[compannyNm]' type='text' placeholder='회사명' required value='#{usermanage.compannyNm}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[userId]' type='text' placeholder='아이디' value='#{usermanage.userId}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[password]' type='text' placeholder='비밀번호' value='#{usermanage.password}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[userNm]' type='text' placeholder='사원명' required value='#{usermanage.userNm}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[deptNm]' type='text' placeholder='부서명' value='#{usermanage.deptNm}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[jikwe]' type='text' placeholder='직위' value='#{usermanage.jikwe}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[jikchk]' type='text' placeholder='직책' required value='#{usermanage.jikchk}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[email]' type='email' placeholder='e-mail' value='#{usermanage.email}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[hpNo]' type='text' placeholder='핸드폰번호' value='#{usermanage.hpNo}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[birthdayDt]' type='text' placeholder='생년월일' value='#{usermanage.birthdayDt}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[post]' type='text' placeholder='우편번호' value='#{usermanage.post}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[address]' type='text' placeholder='회사주소' required value='#{usermanage.address}')
-                    .form-group
-                        input.form-control.input-lg(name='usermanage[callNo]' type='text' placeholder='회사전화번호' value='#{usermanage.callNo}')
-                    .form-group
-                        button.btn.btn-success.btn-lg.btn-block(type='submit') 저장
-                    
+                    .row(style='margin-top:-15px')
+                        .col-xs-12.col-sm-10.col-md-8
+                            .form-group
+                                button.btn.btn-primary.btn-signup(onclick="location.href='/usermanage'") 목록
+                                button.btn.btn-primary.btn-danger(onclick="location.href='/usermanage/#{usermanage._id}/delete'") 삭제
+                                button.btn.btn-primary.btn-success(type='submit') 저장
+                    .row(style='margin-top:20px') 
+                        .col-xs-12.col-sm-10.col-md-8
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[compannyNm]' type='text' placeholder='회사명' required value='#{usermanage.compannyNm}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[userId]' type='text' placeholder='아이디' value='#{usermanage.userId}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[password]' type='text' placeholder='비밀번호' value='#{usermanage.password}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[userNm]' type='text' placeholder='사원명' required value='#{usermanage.userNm}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[deptNm]' type='text' placeholder='부서명' value='#{usermanage.deptNm}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[jikwe]' type='text' placeholder='직위' value='#{usermanage.jikwe}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[jikchk]' type='text' placeholder='직책' required value='#{usermanage.jikchk}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[email]' type='email' placeholder='e-mail' value='#{usermanage.email}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[hpNo]' type='text' placeholder='핸드폰번호' value='#{usermanage.hpNo}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[birthdayDt]' type='text' placeholder='생년월일' value='#{usermanage.birthdayDt}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[post]' type='text' placeholder='우편번호' value='#{usermanage.post}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[address]' type='text' placeholder='회사주소' required value='#{usermanage.address}')
+                            .form-group
+                                input.form-control.input-lg(name='usermanage[callNo]' type='text' placeholder='회사전화번호' value='#{usermanage.callNo}')
