--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -1,40 +1,44 @@
 extends ../layouts/default
 
 block content
-    .masthead.clearfix
-        .inner
-            h3.masthead-brand 사용자 등록
-            nav
-                ul.nav.masthead-nav
-                    li.active
-                        a(href='/usermanage') 목록
-                        
-            form.form.col-md-12.center-block(name='form' action='/usermanage/new' method='post')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[compannyNm]' type='text' placeholder='회사명' required value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[userId]' type='text' placeholder='아이디' value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[password]' type='text' placeholder='비밀번호' value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[userNm]' type='text' placeholder='사원명' required value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[deptNm]' type='text' placeholder='부서명' value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[jikwe]' type='text' placeholder='직위' value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[jikchk]' type='text' placeholder='직책' required value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[email]' type='email' placeholder='e-mail' value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[hpNo]' type='text' placeholder='핸드폰번호' value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[birthdayDt]' type='text' placeholder='생년월일' value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[post]' type='text' placeholder='우편번호' value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[address]' type='text' placeholder='회사주소' required value='')
-                .form-group
-                    input.form-control.input-lg(name='usermanage[callNo]' type='text' placeholder='회사전화번호' value='')
-                .form-group
-                    button.btn.btn-success.btn-lg.btn-block(type='submit') 저장
+    .content
+            .container
+                .row(style='margin-top:20px')
+                    .col-xs-12.col-sm-10.col-md-8
+                        h3.masthead-brand 사원정보관리(내외) > 추가
+                        hr.colorgraph
+                form.form.col-md-12.center-block(name='form' action='/usermanage/new' method='post')
+                    .row(style='margin-top:-15px')
+                        .col-xs-1.col-sm-1.col-md-1.col-sm-offset-7.col-md-offset-7
+                            .form-group
+                                    button.btn.btn-success.btn-md.btn-block(type='submit') 저장
+                    .row(style='margin-top:20px') 
+                        .col-xs-12.col-sm-10.col-md-8
+                                form.form.center-block(name='form' action='/usermanage/new' method='post')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[compannyNm]' type='text' placeholder='회사명' required value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[userId]' type='text' placeholder='아이디' value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[password]' type='text' placeholder='비밀번호' value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[userNm]' type='text' placeholder='사원명' required value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[deptNm]' type='text' placeholder='부서명' value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[jikwe]' type='text' placeholder='직위' value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[jikchk]' type='text' placeholder='직책' required value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[email]' type='email' placeholder='e-mail' value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[hpNo]' type='text' placeholder='핸드폰번호' value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[birthdayDt]' type='text' placeholder='생년월일' value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[post]' type='text' placeholder='우편번호' value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[address]' type='text' placeholder='회사주소' required value='')
+                                    .form-group
+                                        input.form-control.input-lg(name='usermanage[callNo]' type='text' placeholder='회사전화번호' value='')
+                                        
