--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -1,112 +1,84 @@
 extends ../layouts/default
 block head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width,initial-scale=1')
-    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
-    meta(name='author', content='Coderthemes')
-    link(rel='shortcut icon', href='/isu/images/favicon_1.ico')
-    // Plugins css
-    link(href='/isu/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
-    link(href='/isu/plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
-    link(href='/isu/plugins/select2/select2.css', rel='stylesheet', type='text/css')
-    link(href='/isu/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
-    link(href='/isu/plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
-    link(href='/isu/plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
-    link(href='/isu/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
-    link(href='/isu/plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
-
-
-    //link(href='/isu/plugins/summernote/dist/summernote.css' rel='stylesheet')
-
+    // summernot
+    link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
     // dropzone
-    link(href='/isu/plugins/dropzone/dist/dropzone.css', rel='stylesheet', type='text/css')
-    link(href='/isu/plugins/switchery/switchery.min.css', rel='stylesheet')
-    link(href='/isu/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='/isu/css/core.css', rel='stylesheet', type='text/css')
-    link(href='/isu/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='/isu/css/components.css', rel='stylesheet', type='text/css')
-    link(href='/isu/css/pages.css', rel='stylesheet', type='text/css')
-    link(href='/isu/css/menu_light.css', rel='stylesheet', type='text/css')
-    link(href='/isu/css/responsive.css', rel='stylesheet', type='text/css')
-    script(src='/isu/js/modernizr.min.js')
+    link(href='/plugins/dropzone/dist/dropzone.css', rel='stylesheet', type='text/css')
+    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+    script(src='/assets/js/modernizr.min.js')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
-    script(src='/isu/js/bootstrap.min.js')
-    script(src='/isu/js/detect.js')
-    script(src='/isu/js/fastclick.js')
-    script(src='/isu/js/jquery.slimscroll.js')
-    script(src='/isu/js/jquery.blockUI.js')
-    script(src='/isu/js/waves.js')
-    script(src='/isu/js/wow.min.js')
-    script(src='/isu/js/jquery.nicescroll.js')
-    script(src='/isu/js/jquery.scrollTo.min.js')
-    script(src='/isu/plugins/switchery/switchery.min.js')
-
-            
-    script(src='/isu/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
-    script(type='text/javascript', src='/isu/plugins/multiselect/js/jquery.multi-select.js')
-    script(type='text/javascript', src='/isu/plugins/jquery-quicksearch/jquery.quicksearch.js')
-    script(src='/isu/plugins/select2/select2.min.js', type='text/javascript')
-    script(src='/isu/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
-    script(src='/isu/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
-    script(src='/isu/plugins/moment/moment.js')
-    script(src='/isu/plugins/timepicker/bootstrap-timepicker.min.js')
-    script(src='/isu/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
-    script(src='/isu/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
-    script(src='/isu/plugins/bootstrap-daterangepicker/daterangepicker.js')
-
-    script(src='/isu/plugins/dropzone/dist/dropzone.js')
-
+    // jQuery
+    script(src='/assets/js/jquery.min.js')
+    script(src='/assets/js/bootstrap.min.js')
+    script(src='/assets/js/detect.js')
+    script(src='/assets/js/fastclick.js')
+    script(src='/assets/js/jquery.slimscroll.js')
+    script(src='/assets/js/jquery.blockUI.js')
+    script(src='/assets/js/waves.js')
+    script(src='/assets/js/wow.min.js')
+    script(src='/assets/js/jquery.nicescroll.js')
+    script(src='/assets/js/jquery.scrollTo.min.js')
+    script(src='/plugins/switchery/switchery.min.js')
+    script(src='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
+    script(type='text/javascript', src='/plugins/multiselect/js/jquery.multi-select.js')
+    script(type='text/javascript', src='/plugins/jquery-quicksearch/jquery.quicksearch.js')
+    script(src='/plugins/select2/select2.min.js', type='text/javascript')
+    script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
+    script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
+    script(src='/plugins/moment/moment.js')
+    script(src='/plugins/timepicker/bootstrap-timepicker.min.js')
+    script(src='/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
+    script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
+    script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
     // form summernote
-    //script(src='/isu/plugins/summernote/dist/summernote.min.js')
+    script(src='/plugins/summernote/dist/summernote.min.js')
+    // Dropzone js
+    script(src='/plugins/dropzone/dist/dropzone.js')
 
-    // 스타일관련
-    link(href='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.6/summernote.css', rel='stylesheet')
-    // 자바스크립트관련
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.6/summernote.js')
-    // 한글관련
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.6/lang/summernote-ko-KR.min.js')
-
-
-    script(src='/isu/js/incident/index.js' type='text/javascript')
+    script(src='/isu/js/incident/index.js')
 
 block content
     .content-page
-        // Start content
         .content
             .container
-                // Page-Title
                 .row
                     .col-sm-12
                         .page-title-box
                             ol.breadcrumb.pull-right
                                 li
-                                    a(href='#') Home
+                                    a(href='/index') Home
                                 li
-                                    a(href='#') 문의 및 담당자
+                                    a(href='/incident/new') 문의 및 담당자
                                 li.active 문의하기
                             h4.page-title 문의하기
-                // Form TYPE 1
                 .row
                     .col-lg-12
                         .card-box
                             .p-20
-                                form.form-horizontal.group-border-dashed(action='#')
+                                form.form-horizontal.group-border-dashed(id='form' name='form' action='/incident/new' method='post' enctype="multipart/form-data")  
                                     .form-group
-                                        label.col-sm-2.control-label 서비스
+                                        label.col-sm-2.control-label 상위업무
                                         .col-sm-4
-                                            select.form-control
+                                            select.form-control(name='incident[higher_cd]')
                                                 option 스마트오피스
                                                 option eHR
                                                 option Sap ERP
                                                 option 네트워크
-                                        label.col-sm-2.control-label 긴급구분
+                                        label.col-sm-2.control-label 하위업무
                                         .col-sm-2
-                                            select.form-control
+                                            select.form-control(name='incident[lower_cd]')
                                                 option 긴급
                                                 option 보통
                                     .form-group
@@ -114,7 +86,7 @@ block content
                                         .col-sm-4
                                             .input-group
                                                 .input-group
-                                                    input#datepicker-autoclose.form-control(type='text', placeholder='yyyy/mm/dd')
+                                                    input#datepicker-rcd.form-control(type='text', placeholder='yyyy/mm/dd', name='incident[request_complete_date]')
                                                     span.input-group-addon.bg-primary.b-0.text-white
                                                         i.ion-calendar
                                         label.col-sm-2.control-label 공개여부
@@ -125,86 +97,23 @@ block content
                                     .form-group
                                         label.col-sm-2.control-label 제목
                                         .col-sm-10
-                                            input.form-control(type='text')
+                                            input.form-control(type='text', name='incident[title]')
                                     .form-group
                                         .col-sm-12
-                                            //.summernote
-                                            textarea#summernote.form-control.textarea(placeholder='내용' name='incident[content]' value='') 
-                                // start dropzone
-                                .row
-                                    .col-md-12.portlets
-                                        // Your awesome content goes here
-                                        .m-b-30
-                                            form#dropzone.dropzone(action='#')
-                                                .fallback
-                                                    input(name='file', type='file', multiple='')
-                                // end dropzone
-                                .btn-toolbar.form-group.m-b-0
-                                    .pull-right
-                                        button.btn.btn-default.waves-effect.waves-light.m-r-5(type='reset') 취소
-                                        button.btn.btn-primary.waves-effect.waves-light
-                                            span 저장
-                                            i.fa.fa-send.m-l-10
-                // /. Form TYPE 1
-                // Form TYPE 2
-                .row
-                    .col-lg-12
-                        .card-box
-                            .p-20
-                                form(role='form')
-                                    .form-group
-                                        .row
-                                            .col-md-6
-                                                label 서비스
-                                                select.form-control
-                                                    option 스마트오피스
-                                                    option eHR
-                                                    option Sap ERP
-                                                    option 네트워크
-                                            .col-md-3
-                                                label 긴급구분
-                                                select.form-control
-                                                    option 긴급
-                                                    option 보통
-                                    .form-group
-                                        .row
-                                            .col-md-6
-                                                label 완료날짜
-                                                .input-group
-                                                    input#datepicker-autoclose.form-control(type='text', placeholder='yyyy/mm/dd')
-                                                    span.input-group-addon.bg-primary.b-0.text-white
-                                                        i.ion-calendar
-                                            .col-md-3
-                                                label
-                                                .checkbox.checkbox-primary.m-l-15
-                                                    input#checkbox2(type='checkbox')
-                                                    label(for='checkbox2') 공개여부
-                                    .form-group
-                                        .row
-                                            .col-md-12
-                                                label 제목
-                                                input.form-control(type='text')
-                                    .form-group
-                                        .row
-                                            .col-md-12
-                                                //.summernote
-                                // start dropzone
-                                .row
-                                    .col-md-12.portlets
-                                        // Your awesome content goes here
-                                        .m-b-30
-                                            form#dropzone.dropzone(action='#')
-                                                .fallback
-                                                    input(name='file', type='file', multiple='')
-                                // end dropzone
-                                .btn-toolbar.form-group.m-b-0
-                                    .pull-right
-                                        button.btn.btn-default.waves-effect.waves-light.m-r-5(type='reset') 취소
-                                        button.btn.btn-primary.waves-effect.waves-light
-                                            span 저장
-                                            i.fa.fa-send.m-l-10
-                // /. Form TYPE 2
-                // end container
-                // end content
-                footer.footer.text-right
-                    | 2017 © ISU Group.
+                                            textarea#summernote.summernote
+                                    .row
+                                        .col-md-12.portlets
+                                            .m-b-30
+                                                div#dropzone
+                                                    .fallback
+                                                        input(name='incident[attach-file]', type='file', multiple='')
+                                        .btn-toolbar.form-group.m-b-0
+                                            .pull-right
+                                                button.btn.btn-default.waves-effect.waves-light.m-r-5(type='reset') 취소
+                                                button.btn.btn-primary.waves-effect.waves-light(type='submit')
+                                                    span 저장
+                                                        i.fa.fa-send.m-l-10
+block footer
+
+
+
