--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -1,6 +1,5 @@
 extends ../layouts/default
 block head
-
     title  1-2 처리진행현황 목록
     // Plugins css
     link(href='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
@@ -28,8 +27,6 @@ block head
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
-    script(src='/assets/js/jquery.min.js')
-    script(src='/assets/js/bootstrap.min.js')
     script(src='/assets/js/detect.js')
     script(src='/assets/js/fastclick.js')
     script(src='/assets/js/jquery.slimscroll.js')
@@ -45,25 +42,7 @@ block head
     script(src='/plugins/select2/select2.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
-    script(src='/assets/js/jquery.core.js')
-    script(src='/assets/js/jquery.app.js')
     
-    script(src='/plugins/dotdotdot/jquery.dotdotdot.min.js')
-    script.
-      $(document).ready(function (){
-        $(".truncate").dotdotdot({
-            watch: 'window'
-        });
-        $(".truncate1").dotdotdot({
-            watch: 'window',
-            ellipsis: ' ... '
-        });
-        $(".truncate2").dotdotdot({
-            watch: 'window',
-            wrap: 'letter'
-        });
-      });
-
 block content
       // ==============================================================
       // Start right Content here
@@ -132,7 +111,7 @@ block content
                             span.text-primary
                               b 이수시스템
                             span.p-w-xs  2017-09-14 09:23
-                          a.forum-item-title(href='gw_sub1_2_view01.html')
+                          a.forum-item-title(href='/incident/viewDetail')
                             i.md.md-desktop-windows
                             | 중국에서 발송한 메일 확인 요청
                         .col-md-12
@@ -144,7 +123,7 @@ block content
                               | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
                               | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
                               | 어떤 조치를 해야할지 검토 부탁드립니다.
-                          a.text-muted.text-more(href='gw_sub1_2_view01.html') 더보기
+                          a.text-muted.text-more(href='/incident/viewDetail') 더보기
                           .forum-level
                             p.text-muted.font-13
                               b 서비스 만족도:
@@ -166,19 +145,19 @@ block content
                             span.text-primary
                               b 이수시스템
                             span.p-w-xs  2017-09-14 09:23
-                          a.forum-item-title(href='gw_sub1_2_view01.html')
+                          a.forum-item-title(href='/incident/viewDetail')
                             i.md.md-desktop-windows
                             | 중국에서 발송한 메일 확인 요청
                         .col-md-12
                           .forum-content.truncate1.fh-60
-                            a(href='gw_sub1_2_view01.html')
+                            a(href='/incident/viewDetail')
                               | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
                               | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
                               | 어떤 조치를 해야할지 검토 부탁드립니다.
                               | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
                               | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
                               | 어떤 조치를 해야할지 검토 부탁드립니다.
-                          a.text-muted.text-more(href='gw_sub1_2_view01.html') 더보기
+                          a.text-muted.text-more(href='/incident/viewDetail') 더보기
                           .forum-level
                             p.text-muted.font-13
                               b 서비스 만족도:
@@ -200,19 +179,19 @@ block content
                             span.text-primary
                               b 이수시스템
                             span.p-w-xs  2017-09-14 09:23
-                          a.forum-item-title(href='gw_sub1_2_view01.html')
+                          a.forum-item-title(href='/incident/viewDetail')
                             i.md.md-desktop-windows
                             | 중국에서 발송한 메일 확인 요청
                         .col-md-12
                           .forum-content.truncate1.fh-60
-                            a(href='gw_sub1_2_view01.html')
+                            a(href='/incident/viewDetail')
                               | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
                               | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
                               | 어떤 조치를 해야할지 검토 부탁드립니다.
                               | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
                               | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
                               | 어떤 조치를 해야할지 검토 부탁드립니다.
-                          a.text-muted.text-more(href='gw_sub1_2_view01.html') 더보기
+                          a.text-muted.text-more(href='/incident/viewDetail') 더보기
                           .forum-level
                             p.text-muted.font-13
                               b 서비스 만족도:
@@ -223,15 +202,29 @@ block content
                                 i.md.md-star.text-warning
                                 i.md.md-star.text-muted
                             p
-                    // end content
-                  // end 처리진행현황
-                // end card-box
-            // end List Area
-          // end container
-        // end content
         footer.footer.text-right
           | 2017 © ISU Group.
-      // ==============================================================
-      // End Right content here
-      // ==============================================================
-    // END wrapper
+
+
+
+        
+        // dotdotdot
+        script(src='/plugins/dotdotdot/jquery.dotdotdot.min.js')
+
+        script.
+            $(document).ready(function (){
+                $(".truncate").dotdotdot({
+                    watch: 'window'
+                });
+                $(".truncate1").dotdotdot({
+                    watch: 'window',
+                    ellipsis: ' ... '
+                });
+                $(".truncate2").dotdotdot({
+                    watch: 'window',
+                    wrap: 'letter'
+                });
+            });
+    
+
+   
